# codex_test

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
electron-app/: index.html  main.js  package.json  preload.js  renderer.js  styles.css
examples/: basic_usage.py  deep_research_demo.py  multiagent_demo.py
src/: main.py
src/agent/: __init__.py  config.py  graph.py  tools.py
src/langchain_anthropic/: __init__.py
src/langchain_core/: __init__.py  messages.py  prompts.py  tools.py
src/langchain_openai/: __init__.py
src/langgraph/: __init__.py
src/langgraph/checkpoint/memory/: __init__.py
src/langgraph/graph/: __init__.py  message.py  state_graph.py
src/langgraph/prebuilt/: __init__.py
src/multiagent/: __init__.py  manager.py
src/pydantic/: __init__.py
src/requests/: __init__.py
tests/: test_agent.py  test_multiagent.py
